force-app/main/default/objects/Territory_Role_Assignment__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the role assignment is active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>