force-app/main/default/objects/Territory_Role_Assignment__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Admin notes or overrides</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>