force-app/main/default/objects/Territory_Role_Assignment__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Auto-evaluated for active status</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>