force-app/main/default/objects/Territory_Role_Assignment__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If there are multiple users for a role, identify the main one</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>