force-app/main/default/objects/Territory_Role_Assignment__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Used for filtering historical vs current role assignments</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>