force-app/main/default/objects/Territory_Role_Assignment__c/fields/Territory_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Territory_Assignments__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Required. The parent assignment record</description>
    <label>Territory Assignments</label>
    <referenceTo>Territory_Assignments__c</referenceTo>
    <relationshipLabel>Territory Role Assignments</relationshipLabel>
    <relationshipName>Territory_Role_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>